vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts: 
  - nginx-service
  http:
    - route:  
      - destination:
          host: nginx-service
          subset: v1
        weight: 70
      - destination:
          host: nginx-service
          subset: v2
        weight: 30
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  #trafficPolicy:
    #loadBalancer:
    #  simple: RANDOM
  subsets:
    - name: v1
      labels:
        version: A
      #trafficPolicy:
      #  loadBalancer:
      #    simple: LEAST_CONN
    - name: v2
      labels:
        version: B
